# azul

./: .gitignore
ai/: Pipfile
back/: .eslintrc.json  app.js  package-lock.json  package.json  register-models.js  server-mock.js
back/models/: Consts.js  Game.js  index.js
back/src/: socket.js
back/src/game/: context.js  format.js  index.js  init.js  logic.js  model.js
back/src/ia/: index.js
back/src/socket/: index.js
backend/: Cargo.toml
backend/src/: main.rs
backend/src/api/: game.rs  mod.rs
engine/: Cargo.toml  azul_engine.h
engine/src/: game.rs  lib.rs  logic.rs
engine/src/elements/: bag.rs  board.rs  colour.rs  group.rs  misc.rs  player.rs  table.rs  wall.rs
engine/src/game/: logic.rs  mod.rs
engine/src/game/elements/: bag.rs  board.rs  colour.rs  group.rs  misc.rs  mod.rs  player.rs  table.rs  wall.rs
engine/src/game/tests/: mod.rs
engine/src/game/tests/data/: take_marker.yaml
engine/src/tests/: mod.rs
engine/src/tests/data/: take_marker.yaml
front/: .eslintrc.yaml  .eslintrc.yml  README.md  index.html  main.js  package-lock.json  package.json  pubspec.yaml  state.yaml
front/android/app/: build.gradle
front/ios/Runner.xcodeproj/: project.pbxproj
front/lib/: azul_app.dart  main.dart
front/public/: index.html
front/src/: App.js  constants.js  context.js  index.js  main.html  serviceWorker.js  slot.js  style.css  tile.js
front/src/board/: index.js  (+5 more)
front/test/: widget_test.dart
front/web/: index.html  manifest.json
ml/: env.py  pyazul.py
py/: Cargo.toml
py/src/: lib.rs
python/: Cargo.toml
python/core/: lib.rs
(+62 files in other folders)
