[package]
name = "azul_engine"
version = "0.1.0"
authors = ["dom_foy <petermccallauway@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "azul_engine_ffi"
crate-type = ["cdylib"]
test = false
doctest = false
bench = false

[dependencies]
bindgen = "0.56.0"
itertools = "0.9.0"
glob = "0.3.0"
rand = "0.7.3"
yaml-rust = "0.4.4"